--- a/src/templates/header.html.twig
+++ b/src/templates/header.html.twig
@@ -5,6 +5,9 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <!-- wyświetl tytuł strony pobrany z php albo tekst domyślny-->
+    <title>{{ pageTitle|default("Strona z memami") }}</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
     
